--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,19 +6,22 @@
             <div class="footer-contact-blok">
                 <div class="footer-contact">
                     <div class="footer-contact-text">Contact us</div>
-                    <div class="footer-contact-menu"><ul class="footer-contact-list">
-                        <li class="list link"><a href="tel:+380 (68) 443-94-26"
-                                class="list link footer-contact-item">+380 (68) 443-94-26</a></li>
-                        <li class="list link"><a href="mailto:simplychoc@gmail.com"
-                                class="list link footer-contact-item">simplychoc@gmail.com</a></li>
-                    </ul></div>
+                    <div class="footer-contact-menu">
+                        <ul class="footer-contact-list">
+                            <li class="list link"><a href="tel:+380 (68) 443-94-26"
+                                    class="list link footer-contact-item">+380 (68) 443-94-26</a></li>
+                            <li class="list link"><a href="mailto:simplychoc@gmail.com"
+                                    class="list link footer-contact-item">simplychoc@gmail.com</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="footer-soc">
-                    <a class="footer-soc-icon link" target="_blank" href="https://www.instagram.com/" rel="noopener" rel="noreferrer"><svg class="soc-icon">
-                            <use href="../img/choco-icons.svg#icon-instagram"></use>
+                    <a class="footer-soc-icon link" target="_blank" href="https://www.instagram.com/" rel="noopener"
+                        rel="noreferrer"><svg class="soc-icon">
+                            <use href="/img/choco-icons.svg#icon-instagram"></use>
                         </svg></a>
                     <a class="footer-soc-icon link" target="_blank" href="https://twitter.com/"><svg class="soc-icon">
-                            <use href="../img/choco-icons.svg#icon-twitter"></use>
+                            <use href="/img/choco-icons.svg#icon-twitter"></use>
                         </svg></a>
                     </ul>
                 </div>
