added fix adventage

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,7 +1,9 @@
 .advantages-section {
   background-color: var(--secondary-bg-color);
   padding-bottom: 0;
+  max-width: none;
 }
+
 .advantages-container {
   padding-top: 20px;
   padding-bottom: 20px;
