--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<div class="footer-section">
-    <div class="footer-con container" id="footer-choc">
+<footer class="footer-section" id="footer-choc">
+    <div class="footer-con container">
         <div class="footer-up-part">
             <div class="footer-call">Chocolate <span class="footer-call-rest">a delicious cure for a bad day</span>
             </div>
@@ -37,5 +37,6 @@
             </ul>
         </div>
     </div>
-</div>
+    </div>
+</footer>
 <!-- <script type="module" src="../js/gotop.js"></script> -->
