--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -1,9 +1,8 @@
 .buy-now-modal {
-  width: 609px;
   height: 95vh;
   position: relative;
   overflow-y: auto;
-  padding: 48px;
+  padding: 32px 24px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 15px;
@@ -12,7 +11,7 @@
 
 .buy-now-btn-close {
   position: absolute;
-  top: 15px;
+  top: 14px;
   right: 14px;
   padding: 0;
   display: flex;
@@ -44,29 +43,37 @@
 }
 .buy-now-list {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 40px;
-  gap: 16px;
+  margin-bottom: 32px;
+  row-gap: 8px;
+  column-gap: 0px;
 }
 
 .buy-now-thumb {
   text-align: center;
-  padding: 32px 32px 18px;
-
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
   background-color: var(--main-light-text-color);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 15px;
 }
-
 .buy-now-wrapper {
-  margin-bottom: 16px;
+  width: 84px;
+  max-height: 69px;
 }
-
 .buy-now-btn {
-  width: 96px;
+  width: 70px;
+  height: 29px;
+  margin-left: auto;
   white-space: nowrap;
+  padding: 6px 16px;
   font-weight: 600;
-  padding: 8px 27px;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
   background: var(--primary-bg-color);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 20px;
@@ -100,23 +107,22 @@
 .buy-now-label-title {
   margin-bottom: 8px;
   display: block;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  color: var(--main-dark-text-color);
+  letter-spacing: -0.02em;
 }
 
 .buy-now-label-input {
-  height: 66px;
+  height: 45px;
   width: 100%;
 
-  padding-top: 22px;
-  padding-left: 24px;
-  padding-bottom: 22px;
+  padding-top: 14px;
+  padding-left: 18px;
+  padding-bottom: 14px;
+  padding-right: 18px;
 
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
+  letter-spacing: -0.02em;
   color: var(--main-dark-text-color);
   background-color: transparent;
   border: 1.5px solid rgba(17, 17, 17, 0.05);
@@ -128,13 +134,11 @@
 .buy-now-input-wrapper {
   display: flex;
   gap: 14px;
+  flex-wrap: wrap;
 }
 
 .buy-now-label-input::placeholder {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.21;
-
   color: rgba(64, 64, 64, 0.3);
 }
 
@@ -149,26 +153,26 @@
 
 .buy-now-icon-flag {
   position: absolute;
+  width: 74px;
   top: 50%;
   left: 18px;
   transform: translateY(-50%);
-  padding-right: 4px;
-  margin-left: 24px;
-  margin-right: 18px;
-  max-width: 32px;
-  max-height: 32px;
+  display: flex;
+  column-gap: 8px;
+  box-shadow: 1.5px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-bg-color);
+  border-bottom: none;
+  outline: none;
+  align-items: center;
+}
+.buy-now-img-flag {
+  width: 24px;
+  height: 24px;
 }
 .buy-now-label-phone {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 50px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.21;
-  border-right: 2px solid #4040404d;
-  margin-left: 18px;
-  color: var(--main-dark-text-color);
+  letter-spacing: -0.02em;
+  color: var(--forms-text-color);
 }
 
 .buy-now-phone-wrapper .buy-now-label-input {
@@ -184,23 +188,22 @@
   top: 50%;
   right: 14px;
   transform: translateY(-50%);
-  width: 44px;
-  height: 30px;
-  margin-right: 24px;
+  width: 32px;
+  height: 21px;
 }
 
 .buy-now-message {
   display: block;
   resize: none;
   width: 100%;
-  height: 137px;
+  height: 91px;
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.214;
+  line-height: 17px;
   letter-spacing: -0.02em;
   border-radius: 8px;
   border: 1.5px solid rgba(17, 17, 17, 0.05);
-  padding-top: 22px;
-  padding-left: 24px;
+  padding: 14px 18px;
   color: var(--default-icons-color);
   background-color: inherit;
 }
@@ -214,19 +217,14 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
+  letter-spacing: -0.02em;
 
   color: rgba(64, 64, 64, 0.3);
 }
 
 .buy-now-btn-submit {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  color: var(--additional-bg-color);
   padding: 12px 28px;
   width: 109px;
-  max-width: 100%;
-  background: var(--primary-accent-color);
   border-radius: 100px;
   border: none;
   transition: color var(--transition-dur-and-func),
@@ -240,14 +238,108 @@
     background-color var(--transition-dur-and-func);
 }
 .js-overlay-modal {
+  display: none;
+}
+.js-overlay-modal.active {
+  display: block;
   position: fixed;
+  width: 312px;
   top: 50%;
   left: 50%;
-  z-index: 40;
+  z-index: 300;
   transform: translate(-50%, -50%);
-  overflow: hidden;
-  opacity: 0;
-  visibility: hidden;
   transition: opacity var(--transition-dur-and-func),
     visibility var(--transition-dur-and-func);
+}
+@media only screen and (min-width: 768px) {
+  .js-overlay-modal.active {
+    width: 609px;
+  }
+  .buy-now-modal {
+    padding: 48px;
+  }
+  .buy-now-btn-close {
+    top: 24px;
+    right: 24px;
+  }
+  .buy-now-icon-close {
+    width: 28px;
+    height: 28px;
+  }
+  .buy-now-title {
+    font-size: 24px;
+    line-height: 1.16;
+  }
+  .buy-now-list {
+    flex-direction: row;
+    column-gap: 16px;
+    row-gap: 0px;
+  }
+  .buy-now-thumb {
+    flex-direction: column;
+    width: 160px;
+    height: 196px;
+    padding: 24px 20px 18px;
+  }
+  .buy-now-wrapper {
+    width: 120px;
+    height: 107px;
+    margin-bottom: auto;
+  }
+  .buy-now-btn {
+    margin: 0;
+    width: 96px;
+    height: 33px;
+    display: block;
+  }
+  .buy-now-list {
+    margin-bottom: 40px;
+  }
+  .buy-now-label-title {
+    font-size: 14px;
+    line-height: 1.29;
+  }
+  .buy-now-input-wrapper {
+    flex-wrap: nowrap;
+  }
+  .buy-now-label-input {
+    padding: 22px 24px;
+    height: 66px;
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .buy-now-icon-flag {
+    column-gap: 18px;
+    width: 125px;
+  }
+  .buy-now-img-flag {
+    width: 32px;
+    height: 32px;
+  }
+  .buy-now-label-phone {
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .buy-now-phone-wrapper .buy-now-label-input {
+    padding: 22px 24px 22px 177px;
+  }
+  .buy-now-icon-card {
+    width: 44px;
+    height: 30px;
+    right: 24px;
+  }
+  .buy-now-message {
+    height: 137px;
+    padding: 22px 24px;
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .buy-now-message::placeholder {
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .buy-now-btn-submit {
+    width: 133px;
+    padding: 14px 40px;
+  }
 }
