--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <nav class="header-nav">
       <a class="logo header-link link" href="./index.html"><span class="span-simply">SIMPLY</span> CHOCOLATE
         <svg class="header-logo">
-          <use href="../img/choco-icons.svg#icon-chocolate"></use>
+          <use href="/img/choco-icons.svg#icon-chocolate"></use>
         </svg>
       </a>
       <ul class="header-list menu list">
@@ -28,14 +28,14 @@
         <ul class="header-list-messeng list">
           <li>
             <a class="header-icon-link" target="_blank" href="https://instagram.com" rel="noopener noreferrer">
-              <svg class="header-icon-messeng">
+              <svg class="header-icon-messeng" width="24" height="24">
                 <use href="/img/choco-icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="header-icon-link" target="_blank" href="https://twitter.com" rel="noopener noreferrer">
-              <svg class="header-icon-messeng">
+              <svg class="header-icon-messeng" width="24" height="24">
                 <use href="/img/choco-icons.svg#icon-twitter"></use>
               </svg>
             </a>
