fix html, validator+

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -7,15 +7,12 @@
       <div
         class="features-video plyr__video-embed made-blok-video"
         id="features-player"
-        data-poster="/img/how_it’s_made/cover-mobile@1x.jpg"
+        data-poster="./img/how_it’s_made/cover-mobile@1x.jpg"
       >
         <iframe
           src="https://www.youtube.com/embed/2H0tglcIKsM?autoplay=0&modestbranding=1&controls=0&disablekb=1&playsinline=1&cc_load_policy=1&cc_lang_pref=auto&widget_referrer=https%3A%2F%2Fplyr.io%2F%23youtube&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fplyr.io&widgetid=1"
           allowfullscreen
-          allowtransparency
           allow="autoplay"
-          width="100%"
-          height="100%"
         ></iframe>
       </div>
 
