--- a/src/partials/explore-chocolate.html
+++ b/src/partials/explore-chocolate.html
@@ -1,4 +1,4 @@
-<div class="explore-backdrop is-hidden" data-modal-explore>
+<div class="explore-backdrop explore-modal-is-hidden" data-modal-explore>
   <div class="explore-modal">
     <button class="explore-close-btn" type="button" data-modal-close-explore>
       <svg class="explore-close-icon" width="24" height="24">
@@ -10,29 +10,21 @@
       Explore our<br />
       <span class="title-accent">new chocolate</span> first!
     </h2>
-    <form
-      class="explore-modal-form"
-      name="explore-modal-form"
-      autocomplete="on"
-      novalidate
-    >
+    <form class="explore-modal-form" name="explore-modal-form">
       <label class="explore-label">
         <input
           class="explore-input"
-          name="user_e-mail"
+          name="user_email"
           type="email"
           placeholder="Enter your email"
-          required
-          pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$"
+          required=""
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
           minlength="2"
+          title="mail@mail.com"
         />
       </label>
 
-      <button
-        class="explore-modal-button modal-btn"
-        type="submit"
-        data-modal-close-explore
-      >
+      <button class="explore-modal-button modal-btn" type="submit">
         <span class="explore-primary-span">Submit</span>
         <span class="explore-secondary-span">Subscribe</span>
       </button>
