--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,14 +28,14 @@
         <ul class="header-list-messeng list">
           <li>
             <a class="header-icon-link" target="_blank" href="https://instagram.com" rel="noopener noreferrer">
-              <svg class="header-icon-messeng" width="24" height="24">
+              <svg class="header-icon-messeng">
                 <use href="/img/choco-icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="header-icon-link" target="_blank" href="https://twitter.com" rel="noopener noreferrer">
-              <svg class="header-icon-messeng" width="24" height="24">
+              <svg class="header-icon-messeng">
                 <use href="/img/choco-icons.svg#icon-twitter"></use>
               </svg>
             </a>
