--- a/src/partials/explore-chocolate.html
+++ b/src/partials/explore-chocolate.html
@@ -1,4 +1,4 @@
-<div class="explore-backdrop explore-modal-is-hidden" data-modal-explore>
+<div class="explore-backdrop is-hidden" data-modal-explore>
   <div class="explore-modal">
     <button class="explore-close-btn" type="button" data-modal-close-explore>
       <svg class="explore-close-icon" width="24" height="24">
