--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,7 @@
 .hero-section {
     padding-top: 395px;
     padding-bottom: 20px;
+    padding-bottom: 20px;
     background-image: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%), url(/img/hero/chocolate-mobile@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -40,6 +41,8 @@
         background-image: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%), url(/img/hero/chocolate@1x.jpg);
         padding-top: 381px;
         padding-bottom: 40px;
+        margin-top: 88px;
+        margin-bottom: 72px;
     }
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -203,6 +206,7 @@
         align-items: center;
         width: 130px;
         gap: 14px;
+        margin-left: auto;
     }
 }
 
