--- a/src/css/leave-review.css
+++ b/src/css/leave-review.css
@@ -1,25 +1,14 @@
-.is-hidden.review-modal {
+/* .review-modal {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-}
+} */
 
-@media only screen and (min-width:320px) and (max-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 767px) {
     .modal-title-width {
         max-width: 12em;
     }
 }
-
-
-/* .modal-backdrop {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: var(--transition-dur-and-func);
-} */
 
 @media only screen and (max-width: 768px) {
     .review-modal {
@@ -59,9 +48,13 @@
     padding: 0;
     top: 14px;
     right: 14px;
+    top: 14px;
+    right: 14px;
     width: 24px;
     height: 24px;
     border: none;
+    background-color: var(--additional-bg-color);
+    stroke: black;
     background-color: var(--additional-bg-color);
     stroke: black;
     border-radius: 50%;
@@ -72,6 +65,7 @@
 .review-modal-close-btn:focus {
     background-color: var(--secondary-accent-color);
     border: none;
+    stroke: var(--accent-text-color);
     stroke: var(--accent-text-color);
 }
 
@@ -102,13 +96,12 @@
 .leave-review-form {
     display: flex;
     flex-direction: column;
-    height: 431px;
     gap: 14px;
 }
 
 @media only screen and (min-width: 768px) {
     .leave-review-form {
-        gap: 16px;
+        gap: 18px;
     }
 }
 
@@ -193,7 +186,12 @@
     border: 1.5px solid rgba(17, 17, 17, 0.05);
     filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
     border-radius: 8px;
-    margin-bottom: 18px;
+}
+
+@media only screen and (min-width: 768px) {
+    .input-text-area {
+        height: 137px;
+    }
 }
 
 .input-text-area::placeholder {
@@ -218,6 +216,7 @@
 
 .leave-review-modal-btn {
     border: none;
+    margin-top: 4px;
     padding: 12px 28px;
     border-radius: 100px;
     width: 93px;
