--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,11 @@
 <section class="section hero-section">
-    <div class="container">
+    <div class="container hero-container">
         <h1 class="visually-hidden">Delicious Chocolate</h1>
         <h2 class="hero-title">Treat yourself or a loved one to <span class="hero-title-part">our finest ingredients for a moment</span> of pure delight!</h2>
 
         <div class="hero-buttons">
             <div>
-                <button type="button" class="modal-btn hero-modal-btn" js-open-modal>Buy now</button>
+                <button type="button" class="modal-btn hero-modal-btn js-open-modal" data-modal="modal-buy">Buy now</button>
                 <a href="#made" class="link hero-made-btn">How it’s made</a>
             </div>
             <div class="scroll-down">
@@ -17,9 +17,9 @@
                     <svg class="scroll-icon-large" width="7" height="13">
                       <use href="../img/choco-icons.svg#icon-vector"></use>
                     </svg>
+
                 </a>
             </div>
         </div>
-
     </div>
 </section>
