--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,7 +1,7 @@
 <div data-modal class="modal-mobile-menu" id="mobile-menu">
   <button type="button" class="close-button-mobile" data-modal-close>
     <svg class="mobile-icon-close">
-      <use href="../img/choco-icons.svg#icon-x-close"></use>
+      <use href="/img/choco-icons.svg#icon-x-close"></use>
     </svg>
   </button>
 
@@ -9,7 +9,7 @@
     <li>
       <a
         class="mobile-menu-link mobile-menu-text mobile-menu-line link"
-        href="./index.html"
+        href="/index.html"
         >Home</a
       >
     </li>
@@ -51,7 +51,7 @@
         rel="noopener noreferrer"
       >
         <svg class="mobile-menu-icon-svg">
-          <use href="../img/choco-icons.svg#icon-instagram"></use>
+          <use href="/img/choco-icons.svg#icon-instagram"></use>
         </svg>
       </a>
     </li>
@@ -63,7 +63,7 @@
         rel="noopener noreferrer"
       >
         <svg class="mobile-menu-icon-svg">
-          <use href="../img/choco-icons.svg#icon-twitter"></use>
+          <use href="/img/choco-icons.svg#icon-twitter"></use>
         </svg>
       </a>
     </li>
