--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -137,7 +137,7 @@
           class="buy-now-message input-text"
         ></textarea>
       </label>
-      <button class="button buy-now-btn-submit modal-btn" type="submit">
+      <button class="button buy-now-btn-submit modal-btn js-modal-close" type="submit">
         Submit
       </button>
     </form>
