required для інпутів

--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -55,7 +55,7 @@
           <input
             type="text"
             name="username"
-            required=""
+            required
             class="buy-now-label-input placeholder-text"
             placeholder="Name"
             pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$"
@@ -64,7 +64,7 @@
           <input
             type="text"
             name="user_surname"
-            required=""
+            required
             class="buy-now-label-input placeholder-text"
             placeholder="Surname"
             pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$"
@@ -77,7 +77,7 @@
         <input
           type="email"
           name="user_email"
-          required=""
+          required
           class="buy-now-label-input placeholder-text"
           placeholder="Enter your email"
           pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
@@ -90,7 +90,7 @@
           <input
             type="tel"
             name="user-phone"
-            required=""
+            required
             pattern="^[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}$"
             title="xx-xxx-xx-xx"
             class="buy-now-label-input placeholder-text"
