--- a/src/css/components.css
+++ b/src/css/components.css
@@ -202,13 +202,7 @@
 
   color: var(--main-dark-text-color);
 }
-.section-text {
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.02em;
 
-  color: var(--main-dark-text-color);
-}
 .overlay-list {
   display: flex;
   align-items: center;
@@ -220,7 +214,11 @@
   padding: 6px 16px;
   border-radius: 35px;
 }
-
+.overlay-components:last-child {
+  color: var(--main-dark-text-color);
+  border: 1px solid var(--reserve-bg-color);
+  background-color: var(--primary-bg-color);
+}
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .comp-item-tablet {
     order: -2;
